Refactor: UserController: align with ProductController style and response handling