@@ -12,77 +12,68 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/users")
 @RequiredArgsConstructor
 public class UserController {
-private final UserService userService;
+    private final UserService userService;
 
-@PostMapping()
-    public ResponseEntity<UserResponse> createUser(@RequestBody UserRequest userRequest ) {
-    User user = userService.createUser(userRequest.toEntity());
-    UserResponse userResponse = new UserResponse(
-            user.getId(),
-            user.getFirstName(),
-            user.getLastName(),
-            user.getCpfCnpj(),
-            user.getEmail()
-    );
-    return ResponseEntity.status(HttpStatus.CREATED).body(userResponse);
-}
+    @PostMapping
+    public ResponseEntity<UserResponse> createUser(@RequestBody UserRequest userRequest) {
+        User user = userService.createUser(userRequest.toEntity());
+        UserResponse userResponse = convertToUserResponse(user);
+        return ResponseEntity.status(HttpStatus.CREATED).body(userResponse);
+    }
 
-@GetMapping()
+    @GetMapping
     public ResponseEntity<List<UserResponse>> getAllUsers() {
-    List<User> users = userService.getAllUsers();
-    List<UserResponse> userResponseList = users.stream()
-            .map(user -> new UserResponse(
-                    user.getId(),
-                    user.getFirstName(),
-                    user.getLastName(),
-                    user.getCpfCnpj(),
-                    user.getEmail()
-            )).toList();
-            return ResponseEntity.status(HttpStatus.OK).body(userResponseList);
-}
+        List<UserResponse> userResponses = userService.getAllUsers().stream()
+                .map(this::convertToUserResponse)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(userResponses);
+    }
 
-@GetMapping("/{id}")
+    @GetMapping("/{id}")
     public ResponseEntity<UserResponse> getUserById(@PathVariable("id") UUID id) {
         try {
             User user = userService.getUserById(id);
-            UserResponse userResponse = new UserResponse(
-                    user.getId(),
-                    user.getFirstName(),
-                    user.getLastName(),
-                    user.getCpfCnpj(),
-                    user.getEmail()
-            );
+            UserResponse userResponse = convertToUserResponse(user);
             return ResponseEntity.ok(userResponse);
         } catch (UserNotFoundException e) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
         }
     }
-@PutMapping("/{id}")
-    public ResponseEntity<UserResponse> updateUser(@PathVariable("id") UUID id, @RequestBody UserRequest userRequest ) throws UserNotFoundException {
-    try{
-        User user = userService.updateUser(id, userRequest.toEntity());
-        UserResponse userResponse = new UserResponse(
-           user.getId(),
+
+    @PutMapping("/{id}")
+    public ResponseEntity<UserResponse> updateUser(@PathVariable("id") UUID id, @RequestBody UserRequest userRequest) {
+        try {
+            User user = userService.updateUser(id, userRequest.toEntity());
+            UserResponse userResponse = convertToUserResponse(user);
+            return ResponseEntity.ok(userResponse);
+        } catch (UserNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+        }
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteUser(@PathVariable("id") UUID id) {
+        try {
+            userService.deleteUser(id);
+            return ResponseEntity.noContent().build();
+        } catch (UserNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+        }
+    }
+
+    private UserResponse convertToUserResponse(User user) {
+        return new UserResponse(
+                user.getId(),
                 user.getFirstName(),
                 user.getLastName(),
-                user.getEmail(),
-                user.getPassword()
+                user.getCpf(),
+                user.getEmail()
         );
-        return ResponseEntity.ok(userResponse);
-    } catch (UserNotFoundException e) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
-}
-
-@DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteUser(@PathVariable("id") UUID id) throws UserNotFoundException {
-    userService.deleteUser(id);
-    return ResponseEntity.ok().build();
-}
-
 }
